SFC: Add unisoc uwp360 sfc feature.
Signed-off-by: Dong Xiang <dong.xiang@unisoc.com>

--- a/drivers/flash/Kconfig
+++ b/drivers/flash/Kconfig
@@ -80,6 +80,19 @@ config SOC_FLASH_NIOS2_QSPI_DEV_NAME
 	help
 	  Specify the device name for the QSPI flash driver.
 
+config SOC_FLASH_UWP360
+   bool "Unisoc uwp360 flash driver"
+   depends on FLASH
+   default n
+   help
+       Enable Unisoc uwp360 flash driver.
+
+config FLASH_UWP360_NAME
+   string
+   prompt "Unisoc uwp360 flash name"
+   depends on SOC_FLASH_UWP360
+   default "FLASH_UWP360"
+
 source "drivers/flash/Kconfig.qmsi"
 
 source "drivers/flash/Kconfig.stm32"
