--- a/ext/hal/unisoc/uwp360/CMakeLists.txt
+++ b/ext/hal/unisoc/uwp360/CMakeLists.txt
@@ -3,3 +3,5 @@ zephyr_include_directories(
 		)
 zephyr_sources(soc/system.c)
 zephyr_sources_ifdef(CONFIG_USE_UWP360_HAL_UART drivers/src/hal_uart.c)
+zephyr_sources_ifdef(CONFIG_USE_UWP360_HAL_SFC drivers/src/hal_sfc_phy.c)
+zephyr_sources_ifdef(CONFIG_USE_UWP360_HAL_SFC drivers/src/hal_sfc.c)
