--- a/boards/arm/uwp360_evb/uwp360_evb_defconfig
+++ b/boards/arm/uwp360_evb/uwp360_evb_defconfig
@@ -5,7 +5,7 @@ CONFIG_SOC_UWP360=y
 CONFIG_BOARD_UWP360_EVB=y
 CONFIG_CORTEX_M_SYSTICK=y
 CONFIG_FLASH=n
-CONFIG_XIP=n
+CONFIG_XIP=y
 CONFIG_HAS_UWP360=y
 CONFIG_USE_UWP360_HAL_UART=y
 
@@ -26,3 +26,6 @@ CONFIG_UART_CONSOLE=y
 
 CONFIG_WATCHDOG=y
 CONFIG_WDT_UWP360=y
+CONFIG_FLASH=y
+CONFIG_SOC_FLASH_UWP360=y
+CONFIG_USE_UWP360_HAL_SFC=y
