GPIO: Add gpio feature.
Signed-off-by: Dong Xiang <dong.xiang@unisoc.com>

--- a/boards/arm/uwp360_evb/uwp360_evb_defconfig
+++ b/boards/arm/uwp360_evb/uwp360_evb_defconfig
@@ -12,7 +12,9 @@ CONFIG_USE_UWP360_HAL_UART=y
 CONFIG_PRINTK=y
 
 #enable GPIO driver
-CONFIG_GPIO=n
+CONFIG_GPIO=y
+CONFIG_GPIO_UWP360=y
+CONFIG_GPIO_UWP360_P0=y
 
 # enable uart driver
 CONFIG_SERIAL=y
