Add intc and eic controller drivers.
Enable GPIO0 Interrupt and AON UART Interrupt.
Remove all warnings.

Signed-off-by: Dong Xiang <dong.xiang@unisoc.com>

--- a/boards/arm/uwp360_evb/uwp360_evb.dts
+++ b/boards/arm/uwp360_evb/uwp360_evb.dts
@@ -9,6 +9,7 @@
 	aliases {
 		uart_0 = &uart0;
 		uart_1 = &uart1;
+		uart_2 = &uart2;
 	};
 
 	chosen {
@@ -19,6 +20,12 @@
 };
 
 &uart1 {
+	status = "ok";
+	current-speed = <115200>;
+	clock-frequency = <26000000>;
+};
+
+&uart2 {
 	status = "ok";
 	current-speed = <115200>;
 	clock-frequency = <26000000>;
