--- a/boards/arm/uwp360_evb/uwp360_evb_defconfig
+++ b/boards/arm/uwp360_evb/uwp360_evb_defconfig
@@ -5,7 +5,7 @@ CONFIG_SOC_UWP360=y
 CONFIG_BOARD_UWP360_EVB=y
 CONFIG_CORTEX_M_SYSTICK=y
 CONFIG_FLASH=n
-CONFIG_XIP=y
+CONFIG_XIP=n
 CONFIG_HAS_UWP360=y
 CONFIG_USE_UWP360_HAL_UART=y
 
@@ -31,3 +31,8 @@ CONFIG_WDT_UWP360=y
 CONFIG_FLASH=y
 CONFIG_SOC_FLASH_UWP360=y
 CONFIG_USE_UWP360_HAL_SFC=y
+
+CONFIG_INTC_UWP360=y
+CONFIG_EIC_UWP360=y
+CONFIG_AON_INTC_UWP360=y
+CONFIG_AON_EIC_UWP360=y
