Add new feature.
1. Add ipi driver.
2. Add sipc driver.
3. Add wifi driver.
4. Add iwnpi.

Signed-off-by: Dong Xiang <dong.xiang@unisoc.com>

--- a/drivers/interrupt_controller/CMakeLists.txt
+++ b/drivers/interrupt_controller/CMakeLists.txt
@@ -1,6 +1,4 @@
-zephyr_include_directories(
-		.
-		)
+zephyr_include_directories(.)
 
 zephyr_sources_ifdef(CONFIG_ARCV2_INTERRUPT_UNIT    arcv2_irq_unit.c)
 zephyr_sources_ifdef(CONFIG_IOAPIC                  ioapic_intr.c)
