Update sample app.
1. update semphore init limit count.
2. update firmware start address.
3. Add Kconfig for sipc, iwnpi and engpc.

Signed-off-by: Dong Xiang <dong.xiang@unisoc.com>

--- a/ext/fs/fat/CMakeLists.txt
+++ b/ext/fs/fat/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_library(ELMFAT INTERFACE)
 
+zephyr_include_directories(
+		include
+		)
 target_include_directories(ELMFAT INTERFACE include)
 
 zephyr_library()
