--- a/samples/hello_world/prj.conf
+++ b/samples/hello_world/prj.conf
@@ -5,3 +5,45 @@ CONFIG_CONSOLE_SHELL=y
 #CONFIG_CONSOLE_GETCHAR=y
 CONFIG_WATCHDOG=y
 
+CONFIG_SYS_LOG=y
+CONFIG_SYS_LOG_SHOW_COLOR=y
+CONFIG_SYS_LOG_SHOW_TAGS=y
+CONFIG_SYS_LOG_DEFAULT_LEVEL=4
+CONFIG_SYS_LOG_OVERRIDE_LEVEL=4
+
+CONFIG_FILE_SYSTEM=y
+CONFIG_FAT_FILESYSTEM_ELM=y
+#CONFIG_FILE_SYSTEM_NFFS=y
+#CONFIG_FS_NFFS_FLASH_DEV_NAME="FLASH_UWP360"
+CONFIG_FILE_SYSTEM_SHELL=y
+
+CONFIG_DISK_ACCESS=y
+CONFIG_DISK_ACCESS_FLASH=y
+CONFIG_DISK_FLASH_DEV_NAME="UWP360_FLASH"
+CONFIG_DISK_FLASH_START=0x2180000
+CONFIG_DISK_FLASH_MAX_RW_SIZE=100000
+CONFIG_DISK_FLASH_ERASE_ALIGNMENT=0x1000
+CONFIG_DISK_ERASE_BLOCK_SIZE=1000
+CONFIG_DISK_VOLUME_SIZE=1024
+
+CONFIG_UART_AON_UWP360=y
+
+CONFIG_NETWORKING=y
+CONFIG_NET_BUF=y
+CONFIG_NET_BUF_USER_DATA_SIZE=8
+CONFIG_NET_IPV4=y
+CONFIG_NET_IPV6=n
+CONFIG_WIFI=y
+CONFIG_WIFI_UWP360=y
+
+#TEST_RANDOM_GENERATOR=y
+#TIMER_RANDOM_GENERATOR=y
+
+CONFIG_NET_L2_WIFI_MGMT=y
+CONFIG_NET_L2_WIFI_SHELL=y
+
+CONFIG_TEST=y
+
+CONFIG_FLASH=y
+CONFIG_SOC_FLASH_UWP360=y
+CONFIG_USE_UWP360_HAL_SFC=y
