--- a/ext/lib/engpc/CMakeLists.txt
+++ b/ext/lib/engpc/CMakeLists.txt
@@ -1,5 +1,5 @@
 zephyr_include_directories(.)
-zephyr_sources(engpc_main.c)
-zephyr_sources(eng_diag.c)
-zephyr_sources(eng_cmd4linuxhdlr.c)
-zephyr_sources(wifi_eut_sprd.c)
+zephyr_sources_ifdef(CONFIG_ENGPC engpc_main.c)
+zephyr_sources_ifdef(CONFIG_ENGPC eng_diag.c)
+zephyr_sources_ifdef(CONFIG_ENGPC eng_cmd4linuxhdlr.c)
+zephyr_sources_ifdef(CONFIG_ENGPC wifi_eut_sprd.c)
